# ai-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_ENDPOINTS.md  BACKEND_CONTEXT.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile.backend  FRONTEND_PLAN.md  META_BACKEND_E2E_README.md  Makefile  NEXT_STEPS_PLAN.md  PUBLISH_READINESS_CHECKLIST.md  README.md  docker-compose.yml  pyproject.toml
.codex/: AGENTS.md
.github/workflows/: deploy-frontend-main.yml  deploy-main.yml
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/public/: privacy-policy.html
frontend/src/: main.tsx
landing/: README.md  index.html  privacy.html  styles.css  terms.html
src/infra/: container.py  langsmith_tracer.py  logs.py  settings.py  system_adapters.py
src/ports/: agent_profile_repository_port.py  agent_workflow_port.py  blacklist_repository_port.py  clock_port.py  conversation_processing_lock_port.py  conversation_repository_port.py  google_calendar_connection_repository_port.py  google_calendar_provider_port.py  id_generator_port.py  jwt_provider_port.py  llm_provider_port.py  manual_appointment_repository_port.py  memory_admin_port.py  password_hasher_port.py  patient_repository_port.py  processed_webhook_event_repository_port.py  refresh_token_repository_port.py  scheduling_repository_port.py  tenant_repository_port.py  user_repository_port.py  whatsapp_connection_repository_port.py  whatsapp_provider_port.py
src/services/: constants.py  (+2 more)
(+233 files in other folders)
